// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserComments /> renders correctly when empty 1`] = `
<UserComments__MessageContainer>
  <FormattedMessage
    defaultMessage="This user has not posted any comment yet."
    id="app.containers.UsersShowPage.noCommentsForUser"
  />
</UserComments__MessageContainer>
`;

exports[`<UserComments /> renders correctly when empty and own profile 1`] = `
<UserComments__MessageContainer>
  <FormattedMessage
    defaultMessage="You have not posted any comment yet."
    id="app.containers.UsersShowPage.noCommentsForYou"
  />
</UserComments__MessageContainer>
`;

exports[`<UserComments /> renders correctly when error 1`] = `
<UserComments__MessageContainer>
  <FormattedMessage
    defaultMessage="An error has occured, please try again later."
    id="app.containers.UsersShowPage.tryAgain"
  />
</UserComments__MessageContainer>
`;

exports[`<UserComments /> renders correctly with actual comments 1`] = `
<UserComments__Container
  className="e2e-profile-comments"
>
  <a11y__ScreenReaderOnly>
    <FormattedMessage
      defaultMessage="All the comments posted by this user"
      id="app.containers.UsersShowPage.invisibleTitleUserComments"
      tagName="h2"
    />
  </a11y__ScreenReaderOnly>
  <WrappedPostComments
    comments={
      Array [
        Object {
          "attributes": Object {
            "body_multiloc": Object {
              "en": "Just a comment",
            },
            "children_count": 0,
            "created_at": "2019-03-12T00: 00: 00.000Z",
            "downvotes_count": 0,
            "publication_status": "published",
            "updated_at": "2019-03-26T14: 32: 32.000Z",
            "upvotes_count": 0,
          },
          "id": "commentId",
          "relationships": Object {
            "author": Object {
              "data": Object {
                "id": "authorId",
                "type": "user",
              },
            },
            "parent": Object {
              "data": null,
            },
            "post": Object {
              "data": Object {
                "id": "idea1",
                "type": "idea",
              },
            },
            "user_vote": Object {
              "data": null,
            },
          },
          "type": "comment",
        },
      ]
    }
    key="idea1"
    postId="idea1"
    postType="idea"
  />
  <WrappedPostComments
    comments={
      Array [
        Object {
          "attributes": Object {
            "body_multiloc": Object {
              "en": "Just a comment",
            },
            "children_count": 0,
            "created_at": "2019-03-12T00: 00: 00.000Z",
            "downvotes_count": 0,
            "publication_status": "published",
            "updated_at": "2019-03-26T14: 32: 32.000Z",
            "upvotes_count": 0,
          },
          "id": "commentId",
          "relationships": Object {
            "author": Object {
              "data": Object {
                "id": "authorId",
                "type": "user",
              },
            },
            "parent": Object {
              "data": null,
            },
            "post": Object {
              "data": Object {
                "id": "idea2",
                "type": "idea",
              },
            },
            "user_vote": Object {
              "data": null,
            },
          },
          "type": "comment",
        },
        Object {
          "attributes": Object {
            "body_multiloc": Object {
              "en": "Just a comment",
            },
            "children_count": 0,
            "created_at": "2019-03-12T00: 00: 00.000Z",
            "downvotes_count": 0,
            "publication_status": "published",
            "updated_at": "2019-03-26T14: 32: 32.000Z",
            "upvotes_count": 0,
          },
          "id": "commentId",
          "relationships": Object {
            "author": Object {
              "data": Object {
                "id": "authorId",
                "type": "user",
              },
            },
            "parent": Object {
              "data": null,
            },
            "post": Object {
              "data": Object {
                "id": "idea2",
                "type": "idea",
              },
            },
            "user_vote": Object {
              "data": null,
            },
          },
          "type": "comment",
        },
      ]
    }
    key="idea2"
    postId="idea2"
    postType="idea"
  />
</UserComments__Container>
`;

exports[`<UserComments /> renders correctly with actual comments and load more button 1`] = `
<UserComments__Container
  className="e2e-profile-comments"
>
  <a11y__ScreenReaderOnly>
    <FormattedMessage
      defaultMessage="All the comments posted by this user"
      id="app.containers.UsersShowPage.invisibleTitleUserComments"
      tagName="h2"
    />
  </a11y__ScreenReaderOnly>
  <WrappedPostComments
    comments={
      Array [
        Object {
          "attributes": Object {
            "body_multiloc": Object {
              "en": "Just a comment",
            },
            "children_count": 0,
            "created_at": "2019-03-12T00: 00: 00.000Z",
            "downvotes_count": 0,
            "publication_status": "published",
            "updated_at": "2019-03-26T14: 32: 32.000Z",
            "upvotes_count": 0,
          },
          "id": "commentId",
          "relationships": Object {
            "author": Object {
              "data": Object {
                "id": "authorId",
                "type": "user",
              },
            },
            "parent": Object {
              "data": null,
            },
            "post": Object {
              "data": Object {
                "id": "idea1",
                "type": "idea",
              },
            },
            "user_vote": Object {
              "data": null,
            },
          },
          "type": "comment",
        },
      ]
    }
    key="idea1"
    postId="idea1"
    postType="idea"
  />
  <UserComments__Footer>
    <UserComments__LoadMoreButton
      height="50px"
      icon="showMore"
      iconAriaHidden={true}
      onClick={[MockFunction]}
      textColor="#e68f51"
    >
      <FormattedMessage
        defaultMessage="Load more comments"
        id="app.containers.UsersShowPage.loadMoreComments"
      />
    </UserComments__LoadMoreButton>
  </UserComments__Footer>
</UserComments__Container>
`;
